--- a/art-gallery/src/index.css
+++ b/art-gallery/src/index.css
@@ -89,6 +89,10 @@ h5 {
 	font-weight: bold;
 }
 
+.bold {
+	font-weight: bold;
+}
+
 a {
 	color: #c66311;
 	font-weight: bold;
@@ -105,119 +109,7 @@ a:active {
 	font-weight: normal;
 }
 
-.navlink:link,
-.navlink:visited {
-	color: white;
-	font-weight: 400;
-}
-.navlink:hover,
-.navlink:active {
-	text-decoration: underline;
-	cursor: pointer;
-}
-
-.nav {
-	display: flex;
-	flex-direction: row;
-	align-items: flex-end;
-	gap: 15px;
-}
-
-.non-link {
-	opacity: 0.6;
-}
-
-.bold {
-	font-weight: bold;
-}
-
-.card-container {
-	/* masonry layout */
-	columns: 4;
-	column-gap: 15px;
-	margin-top: 30px;
-}
-
-.artwork-card {
-	display: inline-block;
-	vertical-align: top;
-	width: 100%;
-	padding: 12px;
-	margin-bottom: 15px; /* matches column-gap of container */
-	filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.3));
-	transition: filter 0.3s ease-in-out;
-	box-sizing: border-box;
-}
-
-.artwork-card:hover {
-	filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.5));
-}
-
-.card-image {
-	width: 100%;
-	margin-bottom: 8px;
-}
-
-.card-artist-text {
-	color: #1e323c;
-}
-
-.form-item {
-	display: flex;
-	flex-direction: column;
-	gap: 6px;
-	margin-bottom: 20px;
-}
-
-button {
-	color: white;
-	background-color: #c66311;
-	margin-top: 20px;
-	padding: 5px;
-	outline: none;
-	border: none;
-	border-radius: 4px;
-}
-
-.error {
-	color: #b03a2e;
-	font-size: 0.9rem;
-	margin: 0;
-}
-
-textarea {
-	min-height: 200px;
-}
-
-.checkbox-with-label {
-	display: flex;
-	flex-direction: row;
-	gap: 8px;
-}
-
-.delete-icon {
-	width: 30px;
-}
-.delete-icon i {
-	color: #333;
-	opacity: 0.4;
-	cursor: pointer;
-}
-.delete-icon i:hover {
-	color: #b03a2e;
-	opacity: 0.8;
-}
-
-#spinner-container {
-	width: 100%;
-	height: 40vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-#spinner-icon {
-	display: block;
-	color: #c66311;
-	margin: 0;
+.white-link:hover,
+.white-link:active {
+    color: ghostwhite;
 }
