--- a/art-gallery/src/components/common/common.css
+++ b/art-gallery/src/components/common/common.css
@@ -1,3 +1,26 @@
+
+
+.card {
+	color: #1e323c;
+	background-color: white;
+	border: none;
+	border-radius: 6px;
+	display: inline-block;
+	vertical-align: top;
+	width: 100%;
+	padding: 12px;
+	margin-bottom: 15px; /* matches column-gap of container */
+	filter: drop-shadow(0px 2px 2px rgba(30, 50, 60, 0.3));
+	transition: filter 0.3s ease-in-out;
+	box-sizing: border-box;
+}
+
+.card:hover {
+	filter: drop-shadow(0px 5px 5px rgba(30, 50, 60, 0.5));
+    cursor: pointer;
+}
+
+
 #spinner-container {
 	width: 100%;
 	height: 40vh;
@@ -10,11 +33,4 @@
 	display: block;
 	color: #c66311;
 	margin: 0;
-}
-
-.card-container {
-	/* masonry layout */
-	columns: 4;
-	column-gap: 15px;
-	margin-top: 30px;
 }
