--- a/art-gallery/src/index.css
+++ b/art-gallery/src/index.css
@@ -1,115 +1,19 @@
-/* FIXME: Fix L/R padding of 12px on form inputs (see AddArtworkForm for example) - 
-probably has to do with Bootstrap grid classes */
+/* 
+    All of my CSS files are organized by colocation,
+    BUT I don't want to have to import them into every 
+    single file, so I am importing them here instead.
 
-body {
-	color: #1e323c;
-	font-family: 'Assistant', sans-serif;
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
+    It is important to observe order of precedence 
+    by putting general CSS definitions first and then 
+    putting the most specific definitions (which may
+    override general definitions) last.
+*/
 
-#root {
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
-	box-sizing: border-box;
-}
+@import url('./App.css'); /* Global definitions */
+@import url('./components/common/common.css');
+@import url('./components/common/user-input/user-input.css');
+@import url('./components/layout/layout.css');
+@import url('./components/pages/artworks/artworks.css');
+@import url('./components/pages/events/events.css');
 
-main {
-	min-height: calc(100vh - 130px);
-}
-
-.main-content {
-	padding: 30px 100px;
-}
-
-header,
-footer {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	background-color: #1e323c;
-	color: white;
-	width: 100%;
-	padding: 10px 30px;
-}
-
-header {
-	align-items: flex-end;
-	height: 80px;
-}
-
-footer {
-	align-items: center;
-	min-height: 50px;
-}
-
-#mag {
-	font-family: 'Kodchasan', sans-serif;
-	font-size: 30px;
-	font-weight: 200; /* was 400 in Java app */
-	text-transform: uppercase;
-	margin: 0;
-	padding: 0;
-}
-
-h1,
-h2,
-h3 {
-	font-family: 'Kodchasan', sans-serif;
-	text-transform: uppercase;
-}
-
-h1 {
-	color: #c66311;
-	font-weight: 700;
-}
-
-h2 {
-	color: white;
-	background-color: #c66311;
-	font-size: 20px;
-	font-weight: 200;
-	letter-spacing: 6px;
-	width: auto;
-	border-radius: 2px;
-	padding: 5px 8px;
-	margin-bottom: 20px;
-}
-
-h3 {
-	color: #1e323c;
-	font-size: 24px;
-	font-weight: 700;
-}
-
-h5 {
-	color: #c66311;
-	font-weight: bold;
-}
-
-.bold {
-	font-weight: bold;
-}
-
-a {
-	color: #c66311;
-	font-weight: bold;
-	text-decoration: none;
-}
-
-a:hover,
-a:active {
-	color: #b95a0a;
-}
-
-.white-link {
-	color: white;
-	font-weight: normal;
-}
-
-.white-link:hover,
-.white-link:active {
-    color: ghostwhite;
-}
+/* TODO: Add media queries into various files as needed */
