--- a/art-gallery/src/components/forms/forms.css
+++ b/art-gallery/src/components/forms/forms.css
@@ -1,28 +1,49 @@
 button {
 	color: white;
-	background-color: #c66311;
-	margin-top: 20px;
+	background-color: #1e323c;
 	padding: 5px;
 	outline: none;
 	border: none;
 	border-radius: 4px;
+	cursor: pointer;
+}
+
+button.cancel {
+	background-color: #c66311;
+}
+
+/* FIXME: standardize margins on labels and all input fields, maybe continue to use .form-item for that */
+
+label {
+	font-size: 1.1rem;
+	font-weight: 500;
+	/* margin: 12px 0 0 */
+}
+
+input {
+	height: 1.5rem;
+	margin: 0;
+}
+
+.number {
+	width: 50px;
 }
 
 textarea {
-    min-height: 200px;
+	min-height: 200px;
 }
 
 .form-item {
 	display: flex;
 	flex-direction: column;
 	gap: 6px;
-	margin-bottom: 20px;
+	margin: 12px 0 0;
 }
 
 .checkbox-with-label {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
+	display: flex;
+	flex-direction: row;
+	gap: 8px;
 }
 
 .error {
