--- a/art-gallery/src/components/common/common.css
+++ b/art-gallery/src/components/common/common.css
@@ -1,5 +1,3 @@
-
-
 .card {
 	color: #1e323c;
 	background-color: white;
@@ -11,15 +9,28 @@
 	padding: 12px;
 	margin-bottom: 15px; /* matches column-gap of container */
 	filter: drop-shadow(0px 2px 2px rgba(30, 50, 60, 0.3));
-	transition: filter 0.3s ease-in-out;
 	box-sizing: border-box;
 }
 
-.card:hover {
-	filter: drop-shadow(0px 5px 5px rgba(30, 50, 60, 0.5));
-    cursor: pointer;
+.clickable-card {
+	transition: filter 0.3s ease-in-out;
 }
 
+.clickable-card:hover {
+	filter: drop-shadow(0px 5px 5px rgba(30, 50, 60, 0.5));
+	cursor: pointer;
+}
+
+.icon-with-label {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 10px;
+}
+
+.icon-space-right {
+	margin-right: 6px;
+}
 
 #spinner-container {
 	width: 100%;
