--- a/art-gallery/src/index.css
+++ b/art-gallery/src/index.css
@@ -16,4 +16,4 @@
 @import url('./components/pages/artworks/artworks.css');
 @import url('./components/pages/events/events.css');
 
-/* TODO: Add media queries into various files as needed */
+/* TODO: Add media queries, flexible font sizes, and make sure nav moves under title in header */
