--- a/art-gallery/src/App.css
+++ b/art-gallery/src/App.css
@@ -156,3 +156,15 @@ iframe {
 .larger-text {
 	font-size: 1.2rem;
 }
+
+.col-3 {
+    width: 25%;
+}
+
+.col-6 {
+    width: 50%;
+}
+
+.col-9 {
+    width: 75%;
+}
