--- a/art-gallery/src/components/common/common.css
+++ b/art-gallery/src/components/common/common.css
@@ -1,15 +1,14 @@
 .card {
-	color: #1e323c;
-	background-color: white;
-	border: none;
-	border-radius: 6px;
 	display: inline-block;
 	vertical-align: top;
+	color: #1e323c;
+	background-color: white;
 	width: 100%;
-	padding: 12px;
 	margin-bottom: 15px; /* matches column-gap of container */
+	padding: 12px;
+	border: none;
+	border-radius: 6px;
 	filter: drop-shadow(0px 2px 2px rgba(30, 50, 60, 0.3));
-	box-sizing: border-box;
 }
 
 .clickable-card {
@@ -21,23 +20,23 @@
 	cursor: pointer;
 }
 
+.icon {
+    margin-top: 4px;
+}
+
 .icon-with-label {
 	display: flex;
 	flex-direction: row;
-	align-items: center;
+	align-items: flex-start;
 	gap: 10px;
 }
 
-.icon-space-right {
-	margin-right: 6px;
-}
-
 #spinner-container {
-	width: 100%;
-	height: 40vh;
-	display: flex;
+    display: flex;
 	justify-content: center;
 	align-items: center;
+	width: 100%;
+	height: 40vh;
 }
 
 #spinner-icon {
@@ -45,3 +44,5 @@
 	color: #c66311;
 	margin: 0;
 }
+
+/* No media queries needed for these elements */
