--- a/art-gallery/src/components/pages/events/events.css
+++ b/art-gallery/src/components/pages/events/events.css
@@ -1,42 +1,13 @@
 .event-card-container {
 	/* masonry layout */
-	columns: 2;
+	columns: 1;
 	column-gap: 15px;
-	margin-top: 30px;
+	margin-top: 20px;
 }
 
 .event-card-image {
 	width: 100%;
 	margin-bottom: 8px;
-}
-
-.title-text {
-	color: #b95a0a;
-	font-size: 1.6rem;
-	font-weight: 500;
-	margin-bottom: 0;
-}
-
-.subtitle-text {
-	color: #1e323c;
-	font-size: 1.2rem;
-}
-
-.bio-subheader {
-	font-size: 1.1rem;
-	font-weight: 600;
-	margin-top: 10px;
-}
-
-.date-time-price {
-	display: flex;
-	flex-direction: row;
-	color: white;
-	background-color: #b95a0a;
-	font-size: 1.1rem;
-	font-weight: 600;
-	margin: 10px 0;
-	padding: 6px 12px;
 }
 
 .criteria {
@@ -45,8 +16,37 @@
 }
 
 .register-button-container {
-    display: flex;
-    justify-content: flex-end;
+	display: flex;
+	justify-content: flex-end;
+	margin-top: 20px;
+}
+
+/* CSS Grid system for date/time/price layout */
+.date {
+	grid-area: date;
+}
+.time {
+	grid-area: time;
+}
+.price {
+	grid-area: price;
+	justify-self: right;
+}
+
+.date-time-price {
+	display: grid;
+	grid-template-rows: auto;
+	grid-template-columns: auto;
+	grid-template-areas:
+		'date date'
+		'time price';
+	justify-content: space-between;
+	gap: 10px;
+	color: white;
+	background-color: #b95a0a;
+	font-weight: 600;
+	margin: 10px 0;
+	padding: 6px 12px;
 }
 
 /* CSS Grid system for form layout */
@@ -73,10 +73,108 @@
 .register-form-grid {
 	display: grid;
 	grid-template-rows: auto;
-	grid-template-columns: repeat(4, 1fr);
+	grid-template-columns: 1fr 1fr;
 	grid-template-areas:
-		'firstName firstName firstName lastName lastName lastName'
-		'email email email email numGuests numGuests'
-		'. . . . cancel submit';
+		'firstName firstName'
+		'lastName lastName'
+		'email email'
+		'numGuests numGuests'
+		'cancel submit';
 	gap: 10px;
+}
+
+/** MEDIA QUERIES **/
+
+/* 380-479 */
+@media screen and (min-width: 380px) {
+	.date-time-price {
+		grid-template-areas: 
+        'date date'
+        'time price';
+	}
+}
+
+/* 480-767 */
+@media screen and (min-width: 480px) {
+	.date-time-price {
+		grid-template-areas: 'date time price';
+	}
+	.register-form-grid {
+		grid-template-columns: 3fr repeat(2, 1fr);
+		grid-template-areas:
+			'firstName lastName lastName'
+			'email email numGuests'
+			'. cancel submit';
+	}
+}
+
+/* 768-1024 */
+@media screen and (min-width: 768px) {
+	.event-card-container {
+		columns: 2;
+	}
+	.date-time-price {
+		grid-template-areas:
+			'date time'
+			'price price';
+	}
+	.register-form-grid {
+		grid-template-columns: 1fr 1fr;
+		grid-template-areas:
+			'firstName firstName'
+			'lastName lastName'
+			'email email'
+			'numGuests numGuests'
+			'cancel submit';
+	}
+}
+
+/* 1024-1199 */
+@media screen and (min-width: 1024px) {
+	.register-form-grid {
+		grid-template-columns: 3fr repeat(2, 1fr);
+		grid-template-areas:
+			'firstName lastName lastName'
+			'email email numGuests'
+			'. cancel submit';
+	}
+}
+
+/* 1200-1365 */
+@media screen and (min-width: 1200px) {
+	.date-time-price {
+		grid-template-areas: 'date time price';
+	}
+}
+
+/* 1366-1599 */
+@media screen and (min-width: 1366px) {
+	.event-card-container {
+		columns: 3;
+	}
+	.date-time-price {
+		grid-template-areas:
+			'date time'
+			'price price';
+	}
+	.register-form-grid {
+		grid-template-columns: 1fr 1fr;
+		grid-template-areas:
+			'firstName firstName'
+			'lastName lastName'
+			'email email'
+			'numGuests numGuests'
+			'cancel submit';
+	}
+}
+
+/* 1600+ */
+@media screen and (min-width: 1600px) {
+	.register-form-grid {
+		grid-template-columns: 3fr repeat(2, 1fr);
+		grid-template-areas:
+			'firstName lastName lastName'
+			'email email numGuests'
+			'. cancel submit';
+	}
 }
