--- a/art-gallery/src/index.css
+++ b/art-gallery/src/index.css
@@ -1,7 +1,7 @@
 /* 
-    All of my CSS files are organized by colocation,
-    BUT I don't want to have to import them into every 
-    single file, so I am importing them here instead.
+    Most of my CSS files are organized by colocation,
+    BUT I didn't want to have to import them into every 
+    single file, so I have imported them here instead.
 
     It is important to observe order of precedence 
     by putting general CSS definitions first and then 
@@ -13,7 +13,24 @@
 @import url('./components/common/common.css');
 @import url('./components/forms/forms.css');
 @import url('./components/layout/layout.css');
+@import url('./components/pages/pages.css');
 @import url('./components/pages/artworks/artworks.css');
 @import url('./components/pages/events/events.css');
 
-/* TODO: Add media queries, flexible font sizes, and make sure nav moves under title in header */
+/* 
+    NOTE ON RESPONSIVE DESIGN
+    
+    I have set my default styles for widths < 380px 
+    (a few devices really are that small) and have used 
+    media queries within the files imported above to set 
+    definitions for larger screen widths on local selectors. 
+    
+    I have breakpoints at:
+    380, 480, 768, 1024, 1200, 1366, and 1600
+
+    It is not always necessary to finess it that much!
+    
+    I did NOT use media queries for variable font sizes and 
+    most margin and padding values, but instead used clamp() 
+    to control min, preferred, and max values.
+*/
