--- a/art-gallery/src/index.css
+++ b/art-gallery/src/index.css
@@ -13,7 +13,7 @@
 @import url('./components/common/common.css');
 @import url('./components/forms/forms.css');
 @import url('./components/layout/layout.css');
-@import url('./components/pages/pages.css');
+/* TODO: import pages.css */
 @import url('./components/pages/artworks/artworks.css');
 @import url('./components/pages/events/events.css');
 
@@ -28,9 +28,9 @@
     I have breakpoints at:
     380, 480, 768, 1024, 1200, 1366, and 1600
 
-    It is not always necessary to finess it that much!
+    It is not always necessary to finesse it that much!
     
-    I did NOT use media queries for variable font sizes and 
+    I did not use media queries for variable font sizes and 
     most margin and padding values, but instead used clamp() 
     to control min, preferred, and max values.
 */
