--- a/art-gallery/src/components/common/common.css
+++ b/art-gallery/src/components/common/common.css
@@ -20,29 +20,6 @@
     cursor: pointer;
 }
 
-.icon {
-    margin-top: 4px;
-}
-
-.icon-with-label {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    gap: 10px;
-}
-
-#spinner-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 40vh;
-}
-
-#spinner-icon {
-    display: block;
-    color: #c66311;
-    margin: 0;
-}
+/* TODO: Add definitions for icons and Spinner */
 
 /* No media queries needed for these elements */
