--- a/art-gallery/src/index.css
+++ b/art-gallery/src/index.css
@@ -1,20 +1,289 @@
-/* 
-    Most of my CSS files are organized by colocation,
-    BUT I didn't want to have to import them into every 
-    single file, so I have imported them here instead.
+html {
+    font-size: clamp(18px, 2vw, 20px); /* min, preferred, max */
+    height: 100vh;
+    box-sizing: border-box;
+}
 
-    It is important to observe order of precedence 
-    by putting general CSS definitions first and then 
-    putting the most specific definitions (which may
-    override general definitions) last.
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
+/* 
+    NOTE: For responsive design, if you define the font-size range 
+    with clamp() on the html selector as shown above, all other elements 
+    where you want the sizes to adjust similarly can be defined in terms
+    of rem (root em) and will be based on the html selector's value range.
+
+    Learn more here: https://clampcalculator.com/
 */
 
-@import url('./App.css'); /* Global definitions */
-@import url('./components/common/common.css');
-@import url('./components/forms/forms.css');
-@import url('./components/layout/layout.css');
-@import url('./components/pages/artworks/artworks.css');
-@import url('./components/pages/events/events.css');
+body {
+    background-color: white;
+    color: #1e323c;
+    font-family: 'Assistant', sans-serif;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
+body::before {
+    /* Photo credit: https://www.pexels.com/@gdtography-277628/ */
+    background-image: url('https://i.ibb.co/TD6fmXWK/white-installation.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    content: ''; /* Essential for ::before to be rendered */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.1;
+    z-index: -1;
+}
+
+/* 
+    In conjunction with main { flex: 1 }, keeps footer at bottom
+    even when content does not fill page
+*/
+#body-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+header,
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #1e323c;
+    color: white;
+    width: 100%;
+    padding: 15px clamp(20px, 4vw, 30px) 20px;
+}
+
+main {
+    flex: 1;
+}
+
+.main-content {
+    padding: 10px clamp(20px, 4vw, 30px) 20px;
+}
+
+strong {
+    font-weight: 700;
+}
+
+h1,
+h2,
+h3,
+h4 {
+    font-family: 'Kodchasan', sans-serif;
+    text-transform: uppercase;
+}
+
+h1,
+h3,
+h4,
+h5,
+h6 {
+    margin: 12px 0 0;
+}
+
+h1 {
+    color: #c66311;
+    font-size: 1.4rem;
+    font-weight: 700;
+}
+
+h2 {
+    color: white;
+    background-color: #c66311;
+    font-size: 1.1rem;
+    font-weight: 200;
+    letter-spacing: 6px;
+    width: auto;
+    border-radius: 2px;
+    padding: 5px 8px;
+    margin: 20px 0;
+}
+
+h3 {
+    color: #1e323c;
+    font-size: 1.1rem;
+    font-weight: 700;
+}
+
+h4 {
+    color: #c66311;
+    font-size: 1.1rem;
+}
+
+h5 {
+    color: #c66311;
+    font-weight: 700;
+    font-size: 1.1rem;
+}
+
+h6 {
+    color: #1e323c;
+    font-weight: 600;
+    font-size: 1rem;
+}
+
+p {
+    margin: 6px 0;
+}
+
+a,
+.link-like {
+    color: #c66311;
+    font-weight: bold;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+a:hover,
+a:active {
+    color: #b95a0a;
+}
+
+/* Common components */
+
+.card {
+    display: inline-block;
+    vertical-align: top;
+    color: #1e323c;
+    background-color: white;
+    width: 100%;
+    margin-bottom: 15px; /* matches column-gap of container */
+    padding: 12px;
+    border: none;
+    border-radius: 6px;
+    filter: drop-shadow(0px 2px 2px rgba(30, 50, 60, 0.3));
+}
+
+.clickable-card {
+    transition: filter 0.3s ease-in-out;
+}
+
+.clickable-card:hover {
+    filter: drop-shadow(0px 5px 5px rgba(30, 50, 60, 0.5));
+    cursor: pointer;
+}
+
+#mag {
+    font-family: 'Kodchasan', sans-serif;
+    font-size: 1.3rem;
+    font-weight: 200;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 0;
+}
+
+/* Layout components */
+
+.nav-menu {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    gap: 12px;
+}
+
+.link:link,
+.link:visited {
+    color: rgba(255, 255, 255, 0.85);
+    font-size: 0.9rem;
+    font-weight: 400;
+    text-decoration: none;
+}
+
+.link:hover {
+    color: white;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+/* Artwork components */
+
+.artwork-card-container {
+    /* masonry layout */
+    columns: 1;
+    column-gap: 15px;
+    margin-top: 20px;
+}
+
+.artwork-details-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.artwork-card-image {
+    width: 100%;
+    max-width: 700px;
+    margin-bottom: 8px;
+}
+
+.artwork-card-text {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.artwork-card-text > h5 {
+    margin-bottom: 4px;
+}
+
+.artwork-card-text > h6 {
+    margin-top: 0;
+}
+
+/** MEDIA QUERIES **/
+
+/* 380-479 */
+@media screen and (min-width: 380px) {
+    /* No changes needed in this range */
+}
+
+/* 480-767 */
+@media screen and (min-width: 480px) {
+    /* No changes needed in this range */
+}
+
+/* 768-1024 */
+@media screen and (min-width: 768px) {
+    header {
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 15px clamp(20px, 4vw, 30px);
+    }
+    .artwork-card-container {
+        columns: 2;
+    }
+}
+
+/* 1024-1365 */
+@media screen and (min-width: 1024px) {
+    .artwork-card-container {
+        columns: 3;
+    }
+}
+
+/* 1200-1365 */
+@media screen and (min-width: 1200px) {
+    /* No changes needed in this range */
+}
+
+/* 1366+ */
+@media screen and (min-width: 1366px) {
+    .artwork-card-container {
+        columns: 4;
+    }
+}
 
 /* 
     NOTE ON RESPONSIVE DESIGN
