numbered TODOs and removed react-router

--- a/art-gallery/src/App.css
+++ b/art-gallery/src/App.css
@@ -151,7 +151,7 @@ a:active {
     color: #b95a0a;
 }
 
-/* TODO: Add styling for Google Maps iframe */
+/* TODO #7: Add styling for Google Maps iframe */
 
 /** MEDIA QUERIES **/
 
